REBUILD.log
--------------- Rebuild Started: 11/07/2017 09:42:13 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:46:9: warning: statement with no effect [-Wunused-value]
         gettemp280
         ^
main.c:47:9: error: expected ';' before 'UART_UartPutString'
         UART_UartPutString(ltoa(h));
         ^
main.c: In function 'sendtoble':
main.c:308:9: warning: unused variable 'i' [-Wunused-variable]
     int i=0;
         ^
main.c:303:13: warning: unused variable 'uartTxDataLength' [-Wunused-variable]
     uint16  uartTxDataLength;
             ^
main.c:301:13: warning: unused variable 'index' [-Wunused-variable]
     uint8   index=0;
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/07/2017 09:42:14 ---------------
